--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,6 +1,10 @@
 ---
 // This page will contain a list of my projects with links off to relevant pages
-import Nav from "../components/Nav.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 import '../styles/global.css'
 ---
-<Nav/>
+
+<Header/>
+
+<Footer/>
