--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@
 // A 3D dragon character that points its head at the mouse cursor location
 // - mouse hover over a button, the dragon nods its head, happy
 // - mouse hover over the dragon = pet the dragon
-import '../styles/global.css'
-import Nav from '../components/Nav.astro'
-import Footer from '../components/Footer.astro'
+import '../styles/global.css';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 
 const gradColor = "purple";
 ---
@@ -36,7 +36,7 @@ const gradColor = "purple";
     </style>
   </head>
   <body>
-	<Nav/>
+	  <Header/>
     <h1>Welcome to Ben Sanson's <span class="rainbow">homepage</span>!</h1>
 	<div><p>Why is it plain HTML? Because <a href="https://justfuckingusehtml.com/" target="_blank" rel="">this guy</a> and <a href="https://motherfuckingwebsite.com/" target="_blank">this guy</a> said so, and I think they're right.</p></div>
   <Footer></Footer>
