refactor: add some client interactivity
minimum example of how to add external js file for client side interactivity using astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,12 @@ const gradColor = "purple";
   <body>
 	  <Header/>
     <h1>Welcome to Ben Sanson's <span class="rainbow">homepage</span>!</h1>
+    <div><p><button id="stpBtn">Stupid Button</button></p> <p>You pushed this stupid little button <span id="btn-counter">0</span> times. Congratulations.</p></div>
 	<div><p>Why is it plain HTML? Because <a href="https://justfuckingusehtml.com/" target="_blank" rel="">this guy</a> and <a href="https://motherfuckingwebsite.com/" target="_blank">this guy</a> said so, and I think they're right.</p></div>
   <Footer></Footer>
   </body>
+
+  <script>
+    import "../scripts/stupidButton.js";
+  </script>
 </html>
